# project2-kovalishin-timofey-M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
src/primitive_db/data/: hi.json  test.json  users.json
