[tool.poetry]
name = "project2-kovalishin-timofey-m25-555"
version = "0.1.0"
description = "My second project."
authors = ["User tima1173 <tim.kovalishin@gmail.com>"]
packages = [
    { include = "primitive_db", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.scripts]
project = "primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
