[tool.poetry]
name = "project2-kovalishin-timofey-m25-555"
version = "0.1.0"
description = "My second project."
authors = ["User tima1173 <tim.kovalishin@gmail.com>"]
packages = [
    { include = "primitive_db", from = "src" }
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
prompt = "^0.4.1"

[tool.poetry.scripts]
project = "primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)"
]
